After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733894 - ggit-diff-format-email-options.h is missing in ggit.h
ggit-diff-format-email-options.h is missing in ggit.h
Status: RESOLVED FIXED
Product: libgit2-glib
Classification: Core
Component: General
git master
Other FreeBSD
: Normal normal
: ---
Assigned To: gitg-maint
gitg-maint
Depends on:
Blocks:
 
 
Reported: 2014-07-29 04:42 UTC by Ting-Wei Lan
Modified: 2019-02-22 03:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add ggit-diff-format-email-options.h to ggit.h (778 bytes, patch)
2014-07-29 04:42 UTC, Ting-Wei Lan
needs-work Details | Review
Add ggit-diff-format-email-options.h to ggit.h (806 bytes, patch)
2014-07-29 07:08 UTC, Ting-Wei Lan
accepted-commit_now Details | Review

Description Ting-Wei Lan 2014-07-29 04:42:09 UTC
Created attachment 281899 [details] [review]
Add ggit-diff-format-email-options.h to ggit.h

ggit-diff-format-email-options.h is not included in ggit.h, which causes build failure in gitg because of implcit declaraion.
Comment 1 Ignacio Casal Quinteiro (nacho) 2014-07-29 06:06:00 UTC
Review of attachment 281899 [details] [review]:

See comment

::: libgit2-glib/ggit.h
@@ +41,3 @@
 #include <libgit2-glib/ggit-enum-types.h>
 #include <libgit2-glib/ggit-error.h>
+#include <libgit2-glib/ggit-diff-format-email-options.h>

please add it in an alphabetical order.
Comment 2 Ting-Wei Lan 2014-07-29 07:08:42 UTC
Created attachment 281910 [details] [review]
Add ggit-diff-format-email-options.h to ggit.h
Comment 3 Ignacio Casal Quinteiro (nacho) 2014-07-29 07:15:24 UTC
Review of attachment 281910 [details] [review]:

Looks good.