Add ggit-diff-format-email-options.h to ggit.h

https://bugzilla.gnome.org/show_bug.cgi?id=733894